# taskapp

./: .gitignore  LICENSE  README.md  pyproject.toml  task.app.yaml  tasks.py
example/: task.app.yaml
example/tasks/: compile.py  install.py
src/taskapp/: __init__.py  cli.py  project.py  task.py
src/taskapp/tools/: pip.py
src/taskapp/tools/node/: __init__.py
tasks/: build.py  format.py  greet.py  install.py  translate.py
tasks/greet/: wildcard.py
